# Copyright (C) 2010 Donjan Rodic <donjan@dyx.ch>
#
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.


SUBDIRS = src doc/src
EXTRA_DIST = example