# gnuclad autoconf file

AC_PREREQ(2.54)
AC_INIT([gnuclad],[0.1.x],[bryonak at dyx dot ch])
AM_INIT_AUTOMAKE([-Wall])


AC_CONFIG_SRCDIR([src/gnuclad.cpp])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile src/Makefile manual/Makefile])

#not yet used, but will do
AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

AC_OUTPUT
