# Copyright (C) 2010-2011 Donjan Rodic <donjan@dyx.ch>
#
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.

AC_PREREQ(2.54)

AC_CONFIG_AUX_DIR([build-aux])

AC_INIT([gnuclad],[0.3-preview-95],[donjan at dyx dot ch])
AM_INIT_AUTOMAKE([-Wall subdir-objects])

AC_CONFIG_SRCDIR([src/gnuclad.cpp])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile src/Makefile doc/src/Makefile])

AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

AC_OUTPUT
