# Copyright (C) 2010 Donjan Rodic <donjan@dyx.ch>
#
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.

info_TEXINFOS = src/gnuclad.texi
hello_TEXINFOS = src/gnuclad-about.texi\
	src/gnuclad-usage.texi\
	src/gnuclad-tips.texi\
	src/gnuclad-config.texi\
	src/gnuclad-faq.texi
	src/gnuclad-programming.texi\
	src/gnuclad-programming-classes.texi\
	src/gnuclad-programming-config.texi\
	src/gnuclad-programming-parser.texi\
	src/gnuclad-programming-generator.texi\
	src/fdl.texi

EXTRA_DIST = index.html src