bin_PROGRAMS = gnuclad
gnuclad_SOURCES = gnuclad.h gnuclad-portability.h\
                  gnuclad.cpp gnuclad-helpers.cpp gnuclad-cladogram.cpp\
                  generatorCONF.h generatorCONF.cpp\
                  generatorCSV.h generatorCSV.cpp\
                  generatorPNG.h generatorPNG.cpp\
                  generatorSVG.h generatorSVG.cpp\
                  parserCSV.h parserCSV.cpp
gnuclad_CPPFLAGS = -Wall -Wextra -Werror -pedantic-errors -ansi -O2
