# Copyright (C) 2010 Donjan Rodic <donjan@dyx.ch>
#
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.


bin_PROGRAMS = gnuclad
gnuclad_SOURCES = gnuclad.h gnuclad-portability.h\
                  gnuclad.cpp gnuclad-helpers.cpp gnuclad-cladogram.cpp\
                  generatorCONF.h generatorCONF.cpp\
                  generatorCSV.h generatorCSV.cpp\
                  generatorPNG.h generatorPNG.cpp\
                  generatorSVG.h generatorSVG.cpp\
                  parserCSV.h parserCSV.cpp
gnuclad_CPPFLAGS = -Wall -Wextra -Werror -pedantic-errors -ansi -O2
