# Copyright (C) 2010 Donjan Rodic <donjan@dyx.ch>
#
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.


bin_PROGRAMS = gnuclad
gnuclad_SOURCES = gnuclad.h gnuclad-portability.h\
                  gnuclad.cpp gnuclad-cladogram.cpp gnuclad-helpers.cpp\
                  parser/csv.h parser/csv.cpp\
                  parser/dir.h parser/dir.cpp\
                  generator/csv.h generator/csv.cpp\
                  generator/svg.h generator/svg.cpp\
                  generator/conf.h generator/conf.cpp\
                  generator/png.h generator/png.cpp

CFLAGS =
CXXFLAGS =
gnuclad_CPPFLAGS = -Wall -Wextra -Werror -pedantic-errors -ansi -O2
