# Copyright (C) 2010 Donjan Rodic <donjan@dyx.ch>
#
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.


info_TEXINFOS = gnuclad.texi
gnuclad_TEXINFOS = gnuclad-about.texi\
	gnuclad-usage.texi\
	gnuclad-tips.texi\
	gnuclad-config.texi\
	gnuclad-faq.texi\
	gnuclad-programming.texi\
	gnuclad-programming-classes.texi\
	gnuclad-programming-config.texi\
	gnuclad-programming-parser.texi\
	gnuclad-programming-generator.texi\
	fdl.texi

EXTRA_DIST = ../index.html gnuclad.html
